fix: add scripts folder to format ignore and add mdx to format file list

--- a/packages/ibm-products-web-components/src/components/options-tile/options-tile.mdx
+++ b/packages/ibm-products-web-components/src/components/options-tile/options-tile.mdx
@@ -6,13 +6,13 @@ import * as OptionsTileStories from './options-tile.stories';
 
 # OptionsTile
 
-> 💡 Check our
-> [Stackblitz](#)
-> example implementation.
+> 💡 Check our [Stackblitz](#) example implementation.
 
 [![Edit carbon-web-components](https://developer.stackblitz.com/img/open_in_stackblitz.svg)](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/options-tile)
 
-An options tile can contain information, controls or tables which, when collapsed, are summarized. It can be paired with a toggle to quickly enable or disable the option.
+An options tile can contain information, controls or tables which, when
+collapsed, are summarized. It can be paired with a toggle to quickly enable or
+disable the option.
 
 ## Getting started
 
@@ -23,7 +23,6 @@ Here's a quick example to get you started.
 ```javascript
 import '@carbon/ibm-products-web-components/es/components/options-tile/index.js';
 ```
-
 
 ### HTML
 
