--- a/packages/ibm-products/src/components/Guidebanner/Guidebanner.mdx
+++ b/packages/ibm-products/src/components/Guidebanner/Guidebanner.mdx
@@ -18,7 +18,8 @@ import * as stories from './Guidebanner.stories';
 
 ## Overview
 
-The guide banner sits at the top of a page, or page-level tab, to introduce foundational concepts related to the page's content.
+The guide banner sits at the top of a page, or page-level tab, to introduce
+foundational concepts related to the page's content.
 
 ## Example usage
 
