--- a/packages/ibm-products/src/components/ImportModal/ImportModal.mdx
+++ b/packages/ibm-products/src/components/ImportModal/ImportModal.mdx
@@ -21,7 +21,8 @@ import { stackblitzPrefillConfig } from '../../../previewer/codePreviewer';
 
 ## Overview
 
-Modal dialog version of the Import pattern. The import action transfers data or objects from an external source into a system.
+Modal dialog version of the Import pattern. The import action transfers data or
+objects from an external source into a system.
 
 ### Standard
 
