--- a/packages/ibm-products/src/components/NonLinearReading/NonLinearReading.mdx
+++ b/packages/ibm-products/src/components/NonLinearReading/NonLinearReading.mdx
@@ -18,7 +18,8 @@ import * as stories from './NonLinearReading.stories';
 
 ## Overview
 
-Use non-linear reading when space is limited to share a brief, at-a-glance, summary of a concept that may require more explanation for some users.
+Use non-linear reading when space is limited to share a brief, at-a-glance,
+summary of a concept that may require more explanation for some users.
 
 ## Example usage
 
