--- a/packages/ibm-products/src/components/RemoveModal/RemoveModal.mdx
+++ b/packages/ibm-products/src/components/RemoveModal/RemoveModal.mdx
@@ -24,7 +24,10 @@ import { stackblitzPrefillConfig } from '../../../previewer/codePreviewer';
 
 ## Overview
 
-Modal dialog version of the Remove pattern. “Removing” is an action that moves information from one location to another. Removal can be both destructive and non-destructive. “Deletion” is the most common type of removal and is destructive.
+Modal dialog version of the Remove pattern. “Removing” is an action that moves
+information from one location to another. Removal can be both destructive and
+non-destructive. “Deletion” is the most common type of removal and is
+destructive.
 
 ### Standard
 
