--- a/packages/ibm-products/src/components/StepFlow/StepFlow.mdx
+++ b/packages/ibm-products/src/components/StepFlow/StepFlow.mdx
@@ -10,16 +10,25 @@ import * as StepFlowStories from './StepFlow.stories';
 
 ## Overview
 
-The step flow utility can be used to compose stepping experiences across any variation of components. This utility allows for stepping as commonly seen in the `CreateTearsheet` and `CreateFullPage` components, but through a more composable and headless delivery. This allows for the flexibility to incorporate stepped experiences within any component.
+The step flow utility can be used to compose stepping experiences across any
+variation of components. This utility allows for stepping as commonly seen in
+the `CreateTearsheet` and `CreateFullPage` components, but through a more
+composable and headless delivery. This allows for the flexibility to incorporate
+stepped experiences within any component.
 
 Included assets:
+
 - `StepProvider`
 - `useStepContext`
-- `StepGroup`, handles rendering of step components so _only_ the current step is in the DOM
+- `StepGroup`, handles rendering of step components so _only_ the current step
+  is in the DOM
 
 ## Example usage
 
-Wrap your stepped component in the `StepProvider` from the utility. Use `<StepGroup>` and step components with your new step enabled tearsheet component. Any content outside of the `<StepGroup>` will render on every step.
+Wrap your stepped component in the `StepProvider` from the utility. Use
+`<StepGroup>` and step components with your new step enabled tearsheet
+component. Any content outside of the `<StepGroup>` will render on every step.
+
 ```tsx
 const Example = () => {
   return <StepProvider>
@@ -33,7 +42,11 @@ const Example = () => {
   </StepProvider>
 }
 ```
-Any component inside of the step enabled component (`StepProvider`) can use `useStepContext()` to retrieve the step context state, giving the ability to get and set the state.
+
+Any component inside of the step enabled component (`StepProvider`) can use
+`useStepContext()` to retrieve the step context state, giving the ability to get
+and set the state.
+
 ```tsx
 const Step1 = () => {
   const { setFormState, formState } = useStepContext();
@@ -49,11 +62,12 @@ const Step1 = () => {
         }));
       }}
     />
-  )
-}
+  );
+};
 ```
 
 Step state (returned from `useStepContext`):
+
 ```ts
 // This interface should be extended by the consumer to match
 // their own unique use case given the fields within their
@@ -73,4 +87,5 @@ export interface StepState {
   handlePrevious: () => void;
 }
 ```
+
 <Canvas of={StepFlowStories.tearsheetWithSteps} />
