--- a/packages/ibm-products/src/components/TagOverflow/TagOverflow.mdx
+++ b/packages/ibm-products/src/components/TagOverflow/TagOverflow.mdx
@@ -29,28 +29,23 @@ tags associated with the object.
 
 ### Tags with overflow count and overflow modal
 
-<Canvas of={TagOverflowStories.TagsWithOverflowModal} >
-</Canvas>
+<Canvas of={TagOverflowStories.TagsWithOverflowModal}></Canvas>
 
 ### Tags with truncation and overflow count
 
-<Canvas of={TagOverflowStories.TagsWithTruncation} >
-</Canvas>
+<Canvas of={TagOverflowStories.TagsWithTruncation}></Canvas>
 
 ### Multiline tags
 
-<Canvas of={TagOverflowStories.MultilineTags} >
-</Canvas>
+<Canvas of={TagOverflowStories.MultilineTags}></Canvas>
 
 ### UserAvatars with overflow count and overflow modal
 
-<Canvas of={TagOverflowStories.UserAvatarsWithOverflowModal} >
-</Canvas>
+<Canvas of={TagOverflowStories.UserAvatarsWithOverflowModal}></Canvas>
 
 ### Custom components with overflow count and overflow modal
 
-<Canvas of={TagOverflowStories.CustomComponentsWithOverflowModal} >
-</Canvas>
+<Canvas of={TagOverflowStories.CustomComponentsWithOverflowModal}></Canvas>
 
 ## Coded example
 
