--- a/packages/ibm-products/src/components/UserAvatar/UserAvatar.mdx
+++ b/packages/ibm-products/src/components/UserAvatar/UserAvatar.mdx
@@ -54,13 +54,11 @@ the lighter and darker themes.
 
 ### Default
 
-<Canvas of={UserAvatarStories.Default}>
-</Canvas>
+<Canvas of={UserAvatarStories.Default}></Canvas>
 
 ### With Image
 
-<Canvas of={UserAvatarStories.WithImage}>
-</Canvas>
+<Canvas of={UserAvatarStories.WithImage}></Canvas>
 
 ## Code sample
 
