--- a/packages/ibm-products-web-components/src/components/import-modal/import-modal.mdx
+++ b/packages/ibm-products-web-components/src/components/import-modal/import-modal.mdx
@@ -21,7 +21,8 @@ To build this pattern, we recommend including the following components:
 - [cds-text-input](https://web-components.carbondesignsystem.com/?path=/docs/components-text-input)
 - [cds-button](https://web-components.carbondesignsystem.com/?path=/docs/components-button)
 
-These components are used within an `import-modal` wrapper component to handle state management.
+These components are used within an `import-modal` wrapper component to handle
+state management.
 
 > 💡 Check our
 > [Stackblitz](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/import-modal)
