--- a/packages/ibm-products-web-components/src/components/interstitial-screen/interstitial-screen.mdx
+++ b/packages/ibm-products-web-components/src/components/interstitial-screen/interstitial-screen.mdx
@@ -12,7 +12,6 @@ import * as interstitialStories from './interstitial-screen.stories';
 
 [Usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/components/onboarding/interstitial-screen/usage)
 
-
 [Interstitial screen](https://pages.github.ibm.com/carbon/ibm-products/components/onboarding/interstitial-screen/usage)
 can be a full page or an overlay, and are shown on the first time a user
 accesses a new experience (e.g. upon first login or first time opening a page
@@ -28,48 +27,42 @@ Here's a quick example to get you started.
 import '@carbon/ibm-products-web-components/es/components/interstitial-screen/index.js';
 ```
 
-
 ### HTML
 
 ```html
-  <c4p-interstitial-screen
-        ?full-screen=${false}
-        ?open=${true}
-        @c4p-interstitial-opened=${(e) => {
-          console.log('event initialize', e.detail);
-        }}
+<c4p-interstitial-screen
+  ?full-screen="${false}"
+  ?open="${true}"
+  @c4p-interstitial-opened="${(e)"
+  =""
+>
+  { console.log('event initialize', e.detail); }} >
+
+  <c4p-interstitial-screen-header
+    header-title="Use case-specific title"
+    header-subtitle="Use case-specific sub title"
+  ></c4p-interstitial-screen-header>
+  <c4p-interstitial-screen-body>
+    <c4p-interstitial-screen-body-item
+      id="${eachContent.id}"
+      stepTitle="${eachContent.stepTitle}"
+    >
+      <div
+        role="complementary"
+        aria-label="${eachContent.stepTitle}"
+        class="c4p--interstitial-screen-view"
       >
-      
-        <c4p-interstitial-screen-header
-          header-title="Use case-specific title"
-          header-subtitle="Use case-specific sub title"
-        ></c4p-interstitial-screen-header>
-        <c4p-interstitial-screen-body>
-          <c4p-interstitial-screen-body-item
-        id="${eachContent.id}"
-        stepTitle="${eachContent.stepTitle}"
-      >
-       
-        <div
-          role="complementary"
-          aria-label=${eachContent.stepTitle}
-          class="c4p--interstitial-screen-view"
-        >
-          <section class="${blockClass}">
-            <h1 class="${blockClass}--heading">${eachContent.title}</h1>
-            <p class="${blockClass}--body">${eachContent.description}</p>
-          </section>
-
-         
-        </div>
-        </c4p-interstitial-screen-body-item>
-        </c4p-interstitial-screen-body>
-        <c4p-interstitial-screen-footer
-          @c4p-on-before-action="${onAction}"
-        ></c4p-interstitial-screen-footer>
-      </c4p-interstitial-screen>
-
-
+        <section class="${blockClass}">
+          <h1 class="${blockClass}--heading">${eachContent.title}</h1>
+          <p class="${blockClass}--body">${eachContent.description}</p>
+        </section>
+      </div>
+    </c4p-interstitial-screen-body-item>
+  </c4p-interstitial-screen-body>
+  <c4p-interstitial-screen-footer
+    @c4p-on-before-action="${onAction}"
+  ></c4p-interstitial-screen-footer>
+</c4p-interstitial-screen>
 ```
 
 ## `<c4p-interstitial-screen>` attributes, properties and events
@@ -88,7 +81,3 @@ import '@carbon/ibm-products-web-components/es/components/interstitial-screen/in
 ## `<c4p-interstitial-screen-footer>` attributes, properties and events
 
 <ArgTypes of="c4p-interstitial-screen-footer" />
-
-
-
-
