--- a/packages/ibm-products/src/components/InlineTip/InlineTip.mdx
+++ b/packages/ibm-products/src/components/InlineTip/InlineTip.mdx
@@ -19,7 +19,9 @@ import * as stories from './InlineTip.stories';
 
 ## Overview
 
-Inline tips are messages embedded within other components that provide an ambient way to deliver learning content without distracting the user from their flow.
+Inline tips are messages embedded within other components that provide an
+ambient way to deliver learning content without distracting the user from their
+flow.
 
 ## Example usage
 
@@ -34,6 +36,7 @@ Inline tips are messages embedded within other components that provide an ambien
 ## Code sample
 
 ### Stackblitz example with animated media
+
 [![Example with animated media](https://developer.stackblitz.com/img/open_in_stackblitz.svg)](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/examples/carbon-for-ibm-products/InlineTipWithAnimatedMedia)
 
 ## Component API
