--- a/packages/ibm-products/src/components/InterstitialScreen/InterstitialScreen.mdx
+++ b/packages/ibm-products/src/components/InterstitialScreen/InterstitialScreen.mdx
@@ -23,11 +23,14 @@ where a newly purchased capability is presented).
 
 ## Expected Composability
 
-The InterstitialScreen component is structured using the compound component pattern in React, with distinct and well-defined sections: **Header, Body, and Footer**.
-InterstitialScreen acting as a container and **InterstitialScreen.Header, InterstitialScreen.Body, InterstitialScreen.Footer** 
-are static properties of the InterstitialScreen component, effectively acting as sub-components.All related parts of the screen (Header, Body, Footer) are 
-grouped under one logical component: InterstitialScreen.You can mix and match subcomponents or even omit some.
-
+The InterstitialScreen component is structured using the compound component
+pattern in React, with distinct and well-defined sections: **Header, Body, and
+Footer**. InterstitialScreen acting as a container and
+**InterstitialScreen.Header, InterstitialScreen.Body,
+InterstitialScreen.Footer** are static properties of the InterstitialScreen
+component, effectively acting as sub-components.All related parts of the screen
+(Header, Body, Footer) are grouped under one logical component:
+InterstitialScreen.You can mix and match subcomponents or even omit some.
 
 ## About Onboarding
 
@@ -38,10 +41,7 @@ explain, educate, and cultivate novice users into high-functioning power users.
 ## Interstitial Screen Code sample
 
 ```jsx
- <InterstitialScreen
-  open
-  onClose={function noRefCheck() {}}
->
+<InterstitialScreen open onClose={function noRefCheck() {}}>
   <InterstitialScreen.Header
     headerTitle={'headerTitle'}
     headerSubTitle={'headerSubTitle'}
@@ -69,21 +69,22 @@ explain, educate, and cultivate novice users into high-functioning power users.
     skipButtonLabel="Skip"
     startButtonLabel="Get started"
   />
-</InterstitialScreen>;
-
+</InterstitialScreen>
 ```
+
 ## Stackblitz Examples
 
 #### Example using sample design from docs page
+
 [![Example 1](https://developer.stackblitz.com/img/open_in_stackblitz.svg)](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/examples/carbon-for-ibm-products/InterstitialScreen)
 
 #### Example using steppedAnimatedMedia and lottie web
+
 [![Example 1](https://developer.stackblitz.com/img/open_in_stackblitz.svg)](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/examples/carbon-for-ibm-products/InterstitialScreenWithAnimatedMedia)
 
 #### Example using InterstitialView and InterstitialViewModule components
+
 [![Example 1](https://developer.stackblitz.com/img/open_in_stackblitz.svg)](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/examples/carbon-for-ibm-products/InterstitialScreenView)
-
-
 
 ## Component API
 
