--- a/packages/ibm-products/src/components/Toolbar/Toolbar.mdx
+++ b/packages/ibm-products/src/components/Toolbar/Toolbar.mdx
@@ -23,13 +23,11 @@ import * as stories from './Toolbar.stories';
 
 ### Default
 
-<Canvas of={stories._Toolbar} >
-</Canvas>
+<Canvas of={stories._Toolbar}></Canvas>
 
 ### With Image
 
-<Canvas of={stories.vertical} >
-</Canvas>
+<Canvas of={stories.vertical}></Canvas>
 
 ## Code sample
 
