--- a/packages/ibm-products/.storybook/PrebuiltPatterns/About.mdx
+++ b/packages/ibm-products/.storybook/PrebuiltPatterns/About.mdx
@@ -56,7 +56,7 @@ time, we will be adding more patterns in the future.
 
 On occasion, new versions of our components and prebuilt patterns may be in
 progress in other libraries. These may also exist at different points of
-Carbon’s
+Carbon's
 [Product Development Lifecycle](https://carbondesignsystem.com/contributing/product-development-lifecycle/).
 
 | Prebuilt pattern name | Alternative                                                                                                                    | Status  |
