--- a/packages/ibm-products-web-components/src/patterns/saving/saving.mdx
+++ b/packages/ibm-products-web-components/src/patterns/saving/saving.mdx
@@ -12,8 +12,7 @@ To build this pattern, we recommend including the following components:
 - [cds-button](https://web-components.carbondesignsystem.com/?path=/docs/components-button)
 - [cds-inline-loading](https://web-components.carbondesignsystem.com/?path=/docs/components-inline-loading)
 
-These components are used within the `auto-saving` and `manual-saving` wrapper
-components to handle state management.
+These components are used within the `auto-saving` and `manual-saving` wrapper components to handle state management.
 
 > 💡 Check our
 > [Stackblitz](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/saving)
@@ -35,17 +34,21 @@ Here's a quick example to get you started.
   label="Enter in the thing you wanted saved"
   class="saving-story-textarea"
 ></cds-textarea>
-${dirtyInput && status !== 'default' ? html`
-<div class="${blockClass}__message">
-  ${status === 'fail' ? html`
-  <div class="${blockClass}__error-icon">
-    <ErrorFilled size="{16}" />
-    ${errorFilled16({})}
-  </div>
-  ` : ''}
-  <p class="${blockClass}__text">${statusObj[status]?.text}</p>
-</div>
-` : ''}
+${dirtyInput && status !== 'default'
+  ? html`
+      <div class="${blockClass}__message">
+        ${status === 'fail'
+          ? html`
+              <div class="${blockClass}__error-icon">
+                <ErrorFilled size="{16}" />
+                ${errorFilled16({})}
+              </div>
+            `
+          : ''}
+        <p class="${blockClass}__text">${statusObj[status]?.text}</p>
+      </div>
+    `
+  : ''}
 ```
 
 ## Manual
@@ -56,15 +59,15 @@ ${dirtyInput && status !== 'default' ? html`
 <div class="${blockClass}__buttons">
   <cds-button
     kind="secondary"
-    ?disabled="${status !== 'in-progress'}"
+    ?disabled=${status !== 'in-progress'}
     type="button"
   >
     Cancel
   </cds-button>
   <cds-button
-    @click="${onRequestSave}"
+    @click=${onRequestSave}
     kind="primary"
-    ?disabled="${status === 'in-progress'}"
+    ?disabled=${status === 'in-progress'}
     type="button"
   >
     ${statusObj[status]?.text} ${icon}
