--- a/packages/ibm-products/src/components/ConditionBuilder/ConditionBuilder.mdx
+++ b/packages/ibm-products/src/components/ConditionBuilder/ConditionBuilder.mdx
@@ -99,10 +99,12 @@ const statementConfigCustom = [
 
 ### Disable/hide specific property
 
-Each property in the condition builder can be dynamically disabled or hidden while conditions are being built. 
-For this, the property config supports isDisabled and isHidden callbacks. These functions are evaluated during rendering 
-of each property option in the dropdown, and they receive the current condition and group state so they can decide whether the 
-property should be available.
+Each property in the condition builder can be dynamically disabled or hidden
+while conditions are being built. For this, the property config supports
+isDisabled and isHidden callbacks. These functions are evaluated during
+rendering of each property option in the dropdown, and they receive the current
+condition and group state so they can decide whether the property should be
+available.
 
 ```
 properties: [
@@ -113,11 +115,11 @@ properties: [
       type: 'option',
       description: 'Continent',
       isDisabled: ({ conditionState, group }) => {
-       
+
         return true or false;
       },
        isHidden: ({ conditionState, group }) => {
-       
+
         return true or false;
       },
       config: {
