feat: condition builder read only state

--- a/packages/ibm-products/src/components/ConditionBuilder/ConditionBuilder.mdx
+++ b/packages/ibm-products/src/components/ConditionBuilder/ConditionBuilder.mdx
@@ -59,6 +59,12 @@ valueFormatter: (value) => {
 
 ```
 
+### readOnly mode
+
+The condition builder can be rendered in a read-only mode by setting `readOnly`
+prop to true. In this mode, you won’t be able to add or edit conditions, but you
+can still navigate through them using the keyboard.
+
 ### Custom operators
 
 Default operators are built-in for all input types, but users can override them
