--- a/packages/ibm-products/src/components/ConditionBuilder/ConditionBuilder.mdx
+++ b/packages/ibm-products/src/components/ConditionBuilder/ConditionBuilder.mdx
@@ -103,6 +103,40 @@ const statementConfigCustom = [
 ];
 ```
 
+### Disable/hide specific property
+
+Each property in the condition builder can be dynamically disabled or hidden
+while conditions are being built. For this, the property config supports
+getIsDisabled and getIsHidden callbacks. These functions are evaluated during
+rendering of each property option in the dropdown, and they receive the current
+condition and group state so they can decide whether the property should be
+available.
+
+```
+properties: [
+    {
+      id: 'continent',
+      label: 'Continent',
+      icon: Earth,
+      type: 'option',
+      description: 'Continent',
+      getIsDisabled: ({ conditionState, group }) => {
+
+        return true or false;
+      },
+       getIsHidden: ({ conditionState, group }) => {
+
+        return true or false;
+      },
+      config: {
+        options: [
+          ...
+        ],
+      },
+    },
+    ...]
+```
+
 ### Dynamic options
 
 If the input type is set to option and you want to load options dynamically
