--- a/packages/ibm-products/src/components/PageHeader/next/PageHeader.mdx
+++ b/packages/ibm-products/src/components/PageHeader/next/PageHeader.mdx
@@ -223,28 +223,65 @@ associated panel.
   of={PageHeaderStories.TabBarWithTabsAndTags}
 />
 
-The `PageHeader.TabsBar` component accepts a `tags` prop expecting an array of
-objects as shown below. When the viewport width is reduced, these tags
-automatically collapse into a `Popover` for responsive display.
+The `PageHeader.TabsBar` component accepts a `tags` prop expecting a react node.
+If you wish to handle overflowing logic on your own, you can pass any node to
+this prop. You can also use the tag overflow sub component
+(`PageHeader.TagOverflow`), which will handle the overflowing logic for you, yet
+still remains unopinionated and composable enough to allow you to take rendering
+responsibility for the overflow/operational tag and the contents within the
+popover via two render props, `renderOverflowTag` and `renderPopoverContent`.
 
 ```jsx
 const tags = [
-  {
-    type: 'blue',
-    text: 'Tag 1',
-    size: 'md',
-  },
-  {
-    type: 'purple',
-    text: 'Tag 2',
-    size: 'md',
-  },
+  <Tag type="blue" id="example-tag-1">
+    Tag 1
+  </Tag>,
+  <Tag type="purple" id="example-tag-2">
+    Tag 2
+  </Tag>,
+  <Tag type="red" id="example-tag-3">
+    Tag 3
+  </Tag>,
+  <OperationalTag type="blue" id="example-tag-4" text="Tag 4" />,
+  <Tag type="purple" id="example-tag-5">
+    Tag 5
+  </Tag>,
+  <Tag type="red" id="example-tag-6">
+    Tag 6
+  </Tag>,
 ];
 
 return (
   <Tabs>
     <PageHeader.Root>
-      <PageHeader.TabBar tags={tags}>
+      <PageHeader.TabBar
+        tags={
+          <PageHeader.TagOverflow
+            renderOverflowTag={(
+              hiddenItems,
+              handleOverflowClick,
+              openPopover
+            ) => (
+              <OperationalTag
+                onClick={handleOverflowClick}
+                aria-expanded={openPopover}
+                text={`+${hiddenItems.length}`}
+              />
+            )}
+            renderPopoverContent={(hiddenItems) => {
+              return hiddenItems.map((i, index) => {
+                const foundJSXTag = tabBarTags.find((c) => c.props.id === i.id);
+                return cloneElement(foundJSXTag, {
+                  id: `cloned-tag-node-id-${index}`,
+                  key: `cloned-tag-key-${index}`,
+                });
+              });
+            }}
+          >
+            {tags}
+          </PageHeader.TagOverflow>
+        }
+      >
         <TabList>
           <Tab>Tab 1</Tab>
           ...
