docs(checklist): remove commented code

--- a/packages/ibm-products-web-components/src/components/checklist/checklist.mdx
+++ b/packages/ibm-products-web-components/src/components/checklist/checklist.mdx
@@ -21,10 +21,10 @@ The `c4p-checklist` is a web component designed to display a list of items users
 
 #### Component Dependencies
 
-- `c4p-checklist-chart` – for progress visualization
-- `c4p-checklist-group` – for task categorization
-- `c4p-checklist-item` – for individual tasks
-- `c4p-checklist-icon` – for task status indication
+- `c4p-checklist-chart` for progress visualization
+- `c4p-checklist-group` for task categorization
+- `c4p-checklist-item` for individual tasks
+- `c4p-checklist-icon` for task status indication
 
 #### Progress Indicator
 
