chore: update coachmark v1 export naming

--- a/packages/ibm-products/src/components/Coachmark/Coachmark.mdx
+++ b/packages/ibm-products/src/components/Coachmark/Coachmark.mdx
@@ -6,7 +6,10 @@ import {
   Meta,
 } from '@storybook/addon-docs/blocks';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
-import { Coachmark, CoachmarkFixed } from '..';
+import {
+  previewCandidate__Coachmark as Coachmark,
+  previewCandidate__CoachmarkFixed as CoachmarkFixed,
+} from '..';
 import * as CoachmarkStories from './Coachmark.stories';
 
 <Meta title="Coachmark" component={Coachmark} />
