fix(deleteandremove): add loading state in low impact stackblitz example

--- a/packages/ibm-products/src/patterns/DeleteAndRemove/DeleteAndRemove.mdx
+++ b/packages/ibm-products/src/patterns/DeleteAndRemove/DeleteAndRemove.mdx
@@ -7,6 +7,7 @@ import wait from '../../global/js/utils/wait';
 
 export const customImportsArr1 = [
   `import { TrashCan } from '@carbon/react/icons';`,
+  `import { InlineLoading } from '@carbon/react';`,
 ];
 
 export const customImportsArr2 = [
@@ -48,6 +49,7 @@ import {
   Button,
   Checkbox,
   FormLabel,
+  InlineLoading,
   Link,
   Modal,
   TextInput,
