fix(deleteandremove): loading state dependency issue in stackblitz

--- a/packages/ibm-products/src/patterns/DeleteAndRemove/DeleteAndRemove.mdx
+++ b/packages/ibm-products/src/patterns/DeleteAndRemove/DeleteAndRemove.mdx
@@ -6,8 +6,8 @@ import { getCurrentTime } from './_story-assets/utils';
 import wait from '../../global/js/utils/wait';
 
 export const customImportsArr1 = [
-  `import { TrashCan } from '@carbon/react/icons';`,
-  `import { InlineLoading } from '@carbon/react';`,
+  `import { TrashCan } from '@carbon/react/icons';
+  import { InlineLoading } from '@carbon/react';`,
 ];
 
 export const customImportsArr2 = [
