fix(coachmark): added missing exports

--- a/packages/ibm-products/src/components/Coachmark/next/Coachmark/Coachmark.mdx
+++ b/packages/ibm-products/src/components/Coachmark/next/Coachmark/Coachmark.mdx
@@ -5,10 +5,9 @@ import {
   Canvas,
   Meta,
 } from '@storybook/addon-docs/blocks';
-import { CodesandboxLink } from '../../../../global/js/utils/story-helper';
-
+import { stackblitzPrefillConfig } from '../../../../../previewer/codePreviewer';
 import * as CoachmarkStories from './Coachmark.stories';
-import { Coachmark } from './Coachmark';
+import { Coachmark } from '.';
 
 <Meta title="Coachmark" component={Coachmark} />
 
@@ -70,18 +69,34 @@ understand.
 ## Tooltip example usage
 
 <Canvas
-  className="coachmarkExample"
-  withSource="none"
   of={CoachmarkStories.Tooltip}
-></Canvas>
+  additionalActions={[
+    {
+      title: 'Open in Stackblitz',
+      onClick: () =>
+        stackblitzPrefillConfig({
+          story: CoachmarkStories.Tooltip,
+          styles: CoachmarkStories.default.parameters.styles,
+        }),
+    },
+  ]}
+/>
 
 ## Floating example usage
 
 <Canvas
-  className="coachmarkExample"
-  withSource="none"
   of={CoachmarkStories.Floating}
-></Canvas>
+  additionalActions={[
+    {
+      title: 'Open in Stackblitz',
+      onClick: () =>
+        stackblitzPrefillConfig({
+          story: CoachmarkStories.Floating,
+          styles: CoachmarkStories.default.parameters.styles,
+        }),
+    },
+  ]}
+/>
 
 ## Component API
 
