--- a/packages/ibm-products/src/patterns/ImportAndUpload/ImportAndUpload.mdx
+++ b/packages/ibm-products/src/patterns/ImportAndUpload/ImportAndUpload.mdx
@@ -3,7 +3,7 @@ import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import * as stories from './ImportAndUpload.stories';
 import { stackblitzPrefillConfig } from '../../../previewer/codePreviewer';
 
-# Import And Upload Modal
+# Import And Upload
 
 [Usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/patterns/export/usage/)
 |
