--- a/packages/ibm-products/src/components/PageHeader/next/PageHeader.mdx
+++ b/packages/ibm-products/src/components/PageHeader/next/PageHeader.mdx
@@ -20,18 +20,9 @@ import { stackblitzPrefillConfig } from '../../../../previewer/codePreviewer';
 The `PageHeader` is a large family of components, composed of three zones; the
 Breadcrumb, Content, and Tabs.
 
-export const customImportsArr = [
-  `
-  import {Add, Activity, Bee, CloudFoundry_1, AiGenerate} from '@carbon/react/icons';
-  import {Button, Tag} from '@carbon/react';
-  import { breakpoints } from '@carbon/layout'; // only used on image story
-  `,
-];
-
 export const customFunctionArr = [
-  `const BeeIcon = () => <Bee size={32} />;
- const BreadcrumbBeeIcon = () => <Bee size={16} />;
- const pageActionButtonItems = [
+  `const BreadcrumbBeeIcon = () => <Bee size={16} />;`,
+  `const pageActionButtonItems = [
   {
     // props used for both collapse menu item and non-collapsed action form
     id: 'action1',
@@ -111,8 +102,8 @@ export const customFunctionArr = [
       label: 'Primary action',
     },
   },
-];
-const breadcrumbPageActions = (
+];`,
+  `const breadcrumbPageActions = (
     <>
       <Button
         renderIcon={Activity}
@@ -136,33 +127,7 @@ const breadcrumbPageActions = (
         kind="ghost"
       />
     </>
-  );
-  const image1 = 'https://placehold.co/600x400';
-  const image2 = 'https://placehold.co/600x400';
-  const tabBarTags = [
-    <Tag type="blue" id="example-tag-1" key="example-tag-1">
-      Tag 1
-    </Tag>,
-    <Tag type="purple" id="example-tag-2" key="example-tag-2">
-      Tag 2
-    </Tag>,
-    <Tag type="red" id="example-tag-3" key="example-tag-3">
-      Tag 3
-    </Tag>,
-    <OperationalTag
-      type="blue"
-      id="example-tag-4"
-      key="example-tag-4"
-      text="Tag 4"
-    />,
-    <Tag type="purple" id="example-tag-5" key="example-tag-5">
-      Tag 5
-    </Tag>,
-    <Tag type="red" id="example-tag-6" key="example-tag-6">
-      Tag 6
-    </Tag>,
-  ];
-`,
+  );`,
 ];
 
 <Canvas
@@ -178,7 +143,9 @@ const breadcrumbPageActions = (
             preview: ['PageHeader']
           },
           customFunctionDefs: customFunctionArr,
-          customImports: customImportsArr,
+          customImports: [
+            `import { Add, Bee, CloudFoundry_1 } from '@carbon/react/icons';`,
+          ],
           styles: PageHeaderStories.default.parameters.styles,
         }),
     },
@@ -245,7 +212,10 @@ return (
             preview: ['PageHeader'],
           },
           customFunctionDefs: customFunctionArr,
-          customImports: customImportsArr,
+          customImports: [
+            `import { Add, AiGenerate, Activity, Bee, CloudFoundry_1 } from '@carbon/react/icons';`,
+            `import { Button } from '@carbon/react';`,
+          ],
           styles: PageHeaderStories.default.parameters.styles,
         }),
     },
@@ -334,8 +304,16 @@ return (
           status: {
             preview: ['PageHeader'],
           },
-          customFunctionDefs: customFunctionArr,
-          customImports: customImportsArr,
+          customFunctionDefs: [
+            `const BreadcrumbBeeIcon = () => <Bee size={16} />;`,
+            `const image1 = 'https://placehold.co/600x400';`,
+            `const image2 = 'https://placehold.co/600x400';`,
+          ],
+          customImports: [
+            `import { Button } from '@carbon/react';`,
+            `import { breakpoints } from '@carbon/layout';`,
+            `import { Bee } from '@carbon/react/icons';`,
+          ],
           styles: PageHeaderStories.default.parameters.styles,
         }),
     },
@@ -424,8 +402,36 @@ associated panel.
           status: {
             preview: ['PageHeader'],
           },
-          customFunctionDefs: customFunctionArr,
-          customImports: customImportsArr,
+          customFunctionDefs: [
+            ...customFunctionArr,
+            `const tabBarTags = [
+              <Tag type="blue" id="example-tag-1" key="example-tag-1">
+                Tag 1
+              </Tag>,
+              <Tag type="purple" id="example-tag-2" key="example-tag-2">
+                Tag 2
+              </Tag>,
+              <Tag type="red" id="example-tag-3" key="example-tag-3">
+                Tag 3
+              </Tag>,
+              <OperationalTag
+                type="blue"
+                id="example-tag-4"
+                key="example-tag-4"
+                text="Tag 4"
+              />,
+              <Tag type="purple" id="example-tag-5" key="example-tag-5">
+                Tag 5
+              </Tag>,
+              <Tag type="red" id="example-tag-6" key="example-tag-6">
+                Tag 6
+              </Tag>,
+            ];`,
+          ],
+          customImports: [
+            `import { Button, Tag } from '@carbon/react';`,
+            `import { Add, AiGenerate, Activity, Bee, CloudFoundry_1 } from '@carbon/react/icons';`,
+          ],
           styles: PageHeaderStories.default.parameters.styles,
         }),
     },
