fix: review comments

--- a/packages/ibm-products/src/components/InterstitialScreen/InterstitialScreen.mdx
+++ b/packages/ibm-products/src/components/InterstitialScreen/InterstitialScreen.mdx
@@ -13,7 +13,7 @@ import { stackblitzPrefillConfig } from '../../../previewer/codePreviewer';
 - [Overview](#overview)
 - [Expected Composability](#expected-composability)
 - [About Onboarding](#about-onboarding)
-- [Stackblitz Examples](#examples)
+- [Stackblitz Examples](#stackblitz-examples)
 - [Component API](#component-api)
 
 ## Overview
